--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,6 +52,7 @@ body {
         padding: 16px 60px;
         height: 80px;
         box-sizing: border-box;
+        grid-column: 2;
     }
 
     .cabecalho__menu{
@@ -168,6 +169,16 @@ body {
     content: '\e90a';
 }
 
+@media screen and (min-width: 1440px) {
+    .menu-lateral{
+        position: static;
+        width: 200px;
+        grid-column: 1;
+        grid-row: 1 / span 2
+    }
+    
+}
+
 .principal{
     padding: 24px 16px;
     display: grid;
@@ -190,6 +201,7 @@ body {
         grid-template-columns: auto 1fr auto;
         column-gap: 32px;
         padding: 16px 60px;
+        grid-column: 2;
     }    
 }
 
