--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -210,6 +210,10 @@ body {
         padding: 16px 60px;
         grid-column: 2;
     }    
+
+    .titulo-secao{
+        grid-column: span 4;
+    }
 }
 
 .cartao{
@@ -217,6 +221,10 @@ body {
     border-radius: 15px;
     overflow: hidden;
     background-color: #2c343a;
+}
+
+.cartao__imagem--desktop {
+    display: none;
 }
 
 .cartao--destaque{
@@ -262,6 +270,11 @@ body {
     margin-right: 8px;
 }
 
+.cartao__info--dinheiro::before{
+    content: "\e905";
+    margin-right: 8px;
+}
+
 .cartao__botao{
     display: flex;
     justify-content: center;
@@ -279,6 +292,11 @@ body {
     font-size: 24px;
 }
 
+.cartao__botao--compras::before {
+    content: "\e901";
+    font-size: 24px;
+}
+
 .cartao__botao--destaque {
     width: 100%;
     grid-column: span 2;
@@ -293,6 +311,23 @@ body {
 }
 
 @media screen and (min-width: 1440px){
+    .cartao--destaque{
+        margin-bottom: 0;
+    }
+
+    .cartao__imagem--desktop {
+        display: block;
+    }
+
+    .cartao__botao--destaque {
+        grid-column: auto;
+        padding: 16px 8px;
+    }
+
+    .cartao__imagem--mobile {
+        display: none;
+    }
+
     .cartao--recentes{
         display: grid;
         grid-template-columns: auto auto;
@@ -301,6 +336,7 @@ body {
         width: 256px;
         padding: 16px;
         box-sizing: border-box;
+        align-self: flex-start;
     }
 
     .cartao--recentes .cartao__titulo {
@@ -348,26 +384,32 @@ body {
     gap: 16px;
 }
 
-.destaque-video {
-    grid-area: destaque-video;
-}
+@media screen and (min-width: 1440px) {
+    .secao{
+        grid-template-columns: repeat(4, 1fr);
+    }
 
-.videos-recentes{
-    grid-area: videos-recentes;
-}
-
-.secao-videos{
-    grid-area: secao-videos;
-}
-
-.destaque-produtos{
-    grid-area: destaque-produtos;
-}
-
-.produtos-recentes{
-    grid-area: produtos-recentes;
-}
-
-.secao-produtos{
-    grid-area: secao-produtos;
+    .destaque-video {
+        grid-area: destaque-video;
+    }
+    
+    .videos-recentes{
+        grid-area: videos-recentes;
+    }
+    
+    .secao-videos{
+        grid-area: secao-videos;
+    }
+    
+    .destaque-produtos{
+        grid-area: destaque-produtos;
+    }
+    
+    .produtos-recentes{
+        grid-area: produtos-recentes;
+    }
+    
+    .secao-produtos{
+        grid-area: secao-produtos;
+    }
 }
