--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -238,6 +238,10 @@ body {
     gap: 8px;
 }
 
+p {
+    padding: 4px;
+}
+
 .cartao__destaque {
     grid-column: span 2;
 }
@@ -354,6 +358,7 @@ body {
         display: grid;
         row-gap: 16px;
         grid-column: span 2;
+        padding-bottom: 56px;
     }
 
     .cartao__item {
@@ -381,7 +386,8 @@ body {
 
 .secao {
     display: grid;
-    gap: 16px;
+    gap: 24px;
+    column-gap: 32px;
 }
 
 @media screen and (min-width: 1440px) {
